# tirith

./: .dockerignore  .gitignore  CHANGELOG.md  Cargo.toml  Dockerfile  LICENSE-APACHE  LICENSE-COMMERCIAL  LICENSE-MIT  NOTICE  README.md  TIRITH.md  deny.toml  flake.nix
.github/workflows/: ci.yml  release.yml
crates/tirith/: Cargo.toml
crates/tirith-core/: Cargo.toml  build.rs
crates/tirith-core/assets/data/: confusables.txt  known_domains.csv  popular_repos.csv
crates/tirith-core/benches/: perf.rs
crates/tirith-core/src/: audit.rs  confusables.rs  data.rs  engine.rs  extract.rs  lib.rs  normalize.rs  output.rs  parse.rs  policy.rs  receipt.rs  runner.rs  script_analysis.rs  tokenize.rs  verdict.rs
crates/tirith-core/src/rules/: command.rs  ecosystem.rs  environment.rs  hostname.rs  mod.rs  path.rs  terminal.rs  transport.rs
crates/tirith-core/tests/: golden_fixtures.rs  policy_integration.rs
crates/tirith/assets/shell/: tirith.sh
crates/tirith/assets/shell/lib/: fish-hook.fish
crates/tirith/src/cli/: doctor.rs  init.rs
docs/: compatibility.md  homebrew-core.md  troubleshooting.md  uninstall.md
npm/darwin-arm64/: package.json
npm/darwin-x64/: package.json
npm/linux-arm64/: package.json
npm/linux-x64/: LICENSE-COMMERCIAL  package.json
npm/tirith/: package.json
npm/win32-x64/: package.json
packaging/aur/: PKGBUILD
packaging/chocolatey/: tirith.nuspec
packaging/chocolatey/tools/: VERIFICATION.txt  chocolateyinstall.ps1  chocolateyuninstall.ps1
packaging/homebrew/: tirith.rb
packaging/rpm/: tirith.spec
packaging/scoop/: tirith.json
packaging/windows/: install.ps1
scripts/: install.sh
shell/: tirith.sh
shell/lib/: bash-hook.bash  fish-hook.fish  powershell-hook.ps1  zsh-hook.zsh
tests/fixtures/: command.toml  ecosystem.toml  hostname.toml  path.toml  terminal.toml
