[workspace]
members = ["crates/tirith-core", "crates/tirith"]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
rust-version = "1.75"

[workspace.dependencies]
tirith-core = { path = "crates/tirith-core" }
clap = { version = "4", features = ["derive"] }
url = "2"
regex = "1"
percent-encoding = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
once_cell = "1"
base64 = "0.22"
etcetera = "0.8"
chrono = { version = "0.4", features = ["serde"] }
sha2 = "0.10"
fs2 = "0.4"
unicode-normalization = "0.1"
unicode-script = "0.5"
is-terminal = "0.4"
thiserror = "2"
clap_complete = "4"
clap_mangen = "0.2"
uuid = { version = "1", features = ["v4"] }
# Pin home <0.5.12 — v0.5.12 requires edition 2024 (Rust 1.85+), breaks MSRV 1.75
home = ">=0.5, <0.5.12"

[profile.release]
lto = "thin"
strip = true
