[package]
name = "tirith-core"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
description = "URL security analysis library"
repository = "https://github.com/sheeki03/tirith"
homepage = "https://github.com/sheeki03/tirith"
readme = "../../README.md"
keywords = ["security", "url", "analysis"]
categories = ["development-tools"]

[dependencies]
url = { workspace = true }
regex = { workspace = true }
percent-encoding = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
once_cell = { workspace = true }
base64 = { workspace = true }
etcetera = { workspace = true }
home = { workspace = true }
chrono = { workspace = true }
sha2 = { workspace = true }
fs2 = { workspace = true }
unicode-normalization = { workspace = true }
unicode-script = { workspace = true }
is-terminal = { workspace = true }
thiserror = { workspace = true }

[target.'cfg(unix)'.dependencies]
reqwest = { version = "0.12", features = ["blocking"] }

[dev-dependencies]
toml = "0.8"
criterion = { version = "0.5", features = ["html_reports"] }
tempfile = "3"

[[bench]]
name = "perf"
harness = false
